# AutoGainer

./: CMakeLists.txt
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
